# mcp-recommendation-ui

./: README.md  app.py  chainlit.md  db.sqlite  local_servers.py  pyproject.toml
src/: app.py  local_servers.py  vector_store.py
vector_db/: chroma.sqlite3
